kubecube/v0.0.1/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: kubecube-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      caBundle: { { .Values.webhook.caBundle } }
      service:
        name: kubecube
        namespace: kubecube-system
        port: { { .Values.kubecube.args.webhookServerPort } }
        path: /validate-tenant-kubecube-io-v1-project
    failurePolicy: Fail
    name: vproject.kb.io
    rules:
      - apiGroups:
          - tenant.kubecube.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - projects
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      caBundle: { { .Values.webhook.caBundle } }
      service:
        name: kubecube
        namespace: kubecube-system
        port: { { .Values.kubecube.args.webhookServerPort } }
        path: /validate-tenant-kubecube-io-v1-tenant
    failurePolicy: Fail
    name: vtenant.kb.io
    rules:
      - apiGroups:
          - tenant.kubecube.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - tenants
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      caBundle: { { .Values.webhook.caBundle } }
      service:
        name: kubecube
        namespace: kubecube-system
        port: { { .Values.kubecube.args.webhookServerPort } }
        path: /validate-quota-kubecube-io-v1-cube-resource-quota
    failurePolicy: Fail
    name: vcuberesourcequota.kb.io
    rules:
      - apiGroups:
          - quota.kubecube.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - cuberesourcequota
    sideEffects: None
